Add memory for run.